# Qt_network_programming

Qt/: CMakeLists.txt  decrypt_file.sh  main_window.cpp  main_window.h  run.sh  run_file.sh.gpg
Qt/.qt/: QtDeploySupport.cmake
Qt/.qt/deploy_qml_imports/: network.cmake
Qt/.qt_plugins/: Qt6_QmlPlugins_Imports_network.rsp
src/: CMakeLists.txt  build.sh  run.sh  run_2.sh
src/app/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
src/device/: CMakeLists.txt  client_socket.cpp  client_socket_window.cpp  client_socket_window.h  device_main.cpp  device_main_window.cpp  device_main_window.h
src/server/: CMakeLists.txt  TCP.cpp  TCP.h  server_main.cpp  server_main_window.cpp  server_main_window.h
